--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/core": "5.8.0",
     "@fullcalendar/daygrid": "5.8.0",
     "@fullcalendar/interaction": "5.8.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "ant-table-extensions": "^1.1.7",
     "antd": "^4.18.6",
     "axios": "^0.25.0",
@@ -20,6 +21,7 @@
     "moment": "2.29.1",
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
+    "nodemon": "^2.0.15",
     "nouislider": "15.2.0",
     "prop-types": "15.7.2",
     "quill": "1.3.7",
@@ -40,6 +42,7 @@
     "react-paginate": "^8.1.0",
     "react-perfect-scrollbar": "1.5.8",
     "react-quill": "1.3.5",
+    "react-redux": "^7.2.6",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
@@ -48,6 +51,7 @@
     "react-to-print": "2.12.6",
     "react-toastify": "^8.1.1",
     "reactstrap": "8.9.0",
+    "redux-persist": "^6.0.0",
     "select2": "4.0.13",
     "sweetalert2": "11.0.18",
     "validator": "^13.7.0"
