--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
     "country-state-city": "^3.0.1",
+    "crypto-js": "^4.1.1",
     "dropzone": "5.9.2",
     "list.js": "2.3.1",
     "moment": "2.29.1",
