--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "2.3.1",
     "country-state-city": "^3.0.1",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
     "dropzone": "5.9.2",
     "list.js": "2.3.1",
     "moment": "2.29.1",
