--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-flowtype": "5.8.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "react-error-overlay": "^6.0.9",
     "typescript": "4.3.5"
   }
 }
