--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
     "react-select2-wrapper": "1.0.4-beta6",
-    "react-to-print": "2.12.6",
+    "react-to-print": "^2.12.6",
     "react-toastify": "^8.1.1",
     "reactstrap": "8.9.0",
     "redux-persist": "^6.0.0",
