--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap-table2-toolkit": "2.1.3",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
+    "react-country-region-selector": "^3.4.0",
     "react-datepicker": "^4.6.0",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
