--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "dropzone": "5.9.2",
+    "jquery": "^3.6.0",
     "list.js": "2.3.1",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
