--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-notification-alert": "0.0.13",
     "react-paginate": "^8.1.0",
     "react-perfect-scrollbar": "1.5.8",
+    "react-pincode": "^1.1.3",
     "react-quill": "1.3.5",
     "react-redux": "^7.2.6",
     "react-router": "5.2.0",
