--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-form-stepper": "^1.4.3",
+    "react-html5-camera-photo": "^1.5.5",
     "react-icons": "^4.3.1",
     "react-jvectormap": "0.0.16",
     "react-loading-screen": "0.0.17",
