--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=http://35.174.4.42:5000
-#  REACT_APP_API_URL=http://localhost:8000
+# REACT_APP_API_URL=http://35.174.4.42:5000
+ REACT_APP_API_URL=http://localhost:8000
 REACT_APP_CRYPTO_SECRET=secretkey9876
 
  
